--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="/public/assets/css/style.css">
+    <!-- STYLE CSS -->	    
+	<link rel="stylesheet" href="/public/assets/css/style.css">
+    
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WorkCloud</title>
 </head>
 <body>
 	<header class="cd-main-header">
-		<a href="#0" class="cd-logo"><img src="/public/assets/img/work-cloud-logo.svg" alt="Logo"></a>
+		<a href="/" class="cd-logo">
+			<img class="logo-worwcloud" src="/public/assets/img/work-cloud-logo.svg" alt="Logo">
+		</a>
 		
 		<div class="cd-search is-hidden">
 			<form action="#0">
@@ -26,16 +30,15 @@
 
 		<nav class="cd-nav">
 			<ul class="cd-top-nav">
-				<li><a href="#0">Tour</a></li>
-				<li><a href="#0">Support</a></li>
+				<li><a href="#0">Mis Grupos</a></li>
+				<li><a href="#0">Grupos</a></li>
+				<li><a href="#0">Soporte</a></li>
 				<li class="has-children account">
 					<a href="#0">
 						<img src="/public/assets/img/cd-avatar.png" alt="avatar">
-						Account
+						OscarRaygoza
 					</a>
-
 					<ul>
-
 						<li><a href="#0">My Account</a></li>
 						<li><a href="#0">Edit Account</a></li>
 						<li><a href="#0">Logout</a></li>
@@ -44,6 +47,7 @@
 			</ul>
 		</nav>
 	</header> <!-- .cd-main-header -->
+	</div>
 <body>
     <div class="container p-4">
         
@@ -66,8 +70,10 @@
         </div>
 
     </div>
-<!--JQUERY-->
-  <script src="/public/assets/js/script-jquery-index.js"></script>
-  <script src="/public/assets/js/home.js"></script>
+	
+	<!-- JQUERY -->	
+	<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+
+  	<script src="/public/assets/js/home.js"></script>
 </body>
 </html>
