--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -12,7 +12,7 @@
             con todo el personal y obtener mejores resultados<br>
             para la empresa y sus trabajadores.
             </p>
-            <a href="#" class="btn-registro-banner">Registrate</a>
+            <a href="/signup" class="btn-registro-banner">Registrate</a>
         </div>
         <article class="col-index" id="columna1">
         <img id="banner-img-index" src="/public/assets/img/banners/index-banner-3.svg" class="banner-img" alt="">
