--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -28,7 +28,7 @@
                     <a href="#" class="btn btn-primary">Codigo &#60;/&#62;</a>
                 </div>
                 <button class="btn btn-success">
-                    <i class="fa fa-upload"></i>Upload publicatin
+                    <i class="fa fa-upload"></i>Publicar
                 </button>
                 </div>
             </div>
