--- a/src/views/signin.hbs
+++ b/src/views/signin.hbs
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-md-4 offset-md-4">
+    <div class="col-md-7 offset-md-4">
         <div class="card mt-4 text-center">
             <div class="card-header">
-                <h3>Sign In</h3>
+                <h3>Iniciar sesion</h3>
             </div>
             <div class="card-body">                
                 <form action="/signin" method="POST">
@@ -15,6 +15,9 @@
                     <button type="submit" class="btn btn-primary btn-block mt-4">
                         SignIn
                     </button>
+                    <div class="form-group mt-5">
+                        <p><a href="">Olvidaste tu conntraseña?</a></p>
+                    </div>
                 </form>
             </div>
         </div>
