--- a/src/views/layouts/session.hbs
+++ b/src/views/layouts/session.hbs
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/assets/fonts/demo-files/demo.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+     <!-- BOOTSTRAP 4 -->
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     
     <link href="/public/assets/css/style-index.css" type="text/css" rel="stylesheet">
 
@@ -16,25 +19,36 @@
     <title>WorkCloud</title>
 </head>
 <body>
-    <header>
-    <div id="menu-fixed" class="menu-fixed">
-        <div class="menu-tags">
-            <img class="menu-links logo-nav" src="/public/assets/img/work-cloud-logo.svg" alt="">
-
-            <a class="menu-links" href="/home">Home</a>
-            <a class="menu-links" href="/about">About</a>
-            <a class="menu-links" href="/documentation">Documentation</a>
-
-            <a class="menu-links" id="btnLogin" href="/signin">Log in</a>
-            <a class="menu-links" id="btnLogin" href="/help">Help</a>
-            <a href="#0" class="cd-nav-trigger" id="toggle-menu">Menu<span></span></a>
+    <nav class="navbar navbar-expand-lg navbar-dark primary-color">
+        <a class="navbar-brand" href="/">
+            <img src="/public/assets/img/work-cloud-logo.svg" alt="logo.png" class="w-50">       
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/" id="btn-nav">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item ml-5">
+                <a class="nav-link" href="/signup" id="btn-nav" >SingUp</a>
+            </li>
+                <li class="nav-item ml-5">
+                <a class="nav-link" href="/signin" id="btn-nav">SingIn</a>
+            </li>
+            </ul>
         </div>
-    </div>
-    </header>
-
-
+    </nav>
+<style>
+#btn-nav{
+    padding: 0px;
+    padding-right: 25px;
+	box-shadow: 2px 0 lime;
+}
+</style>
     {{{body}}}
-    {{>footer}}
   	<script src="/public/assets/js/home.js"></script>
 </body>
 </html>
