--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="card" id="pbl-file">
     <div class="card-header bg-dark">
         <h3 class="card-title text-white">
-            <i class="fa fa-image"></i> Upload
+            <i class="fa fa-image"></i> Publicar
         </h3>
     </div>
     <div class="card-body">
@@ -12,7 +12,6 @@
                         <input type="file" name="publication" id="inputGroup" aria-describedby="inputGroupFileAddon"
                             class="custom-file-input" required>
                         <label class="custom-file-label" for="inputGroupFile">Choose file</label>
-
                     </div>
                 </div>
                 <div class="form-group">
