--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -71,14 +71,15 @@
                             <p class="mb-0 float-left">Imagen de perfil:</p>
                             <footer class="blockquote-footer">Selecciona tu imagen de perfil</footer>
                         </blockquote>
-                        <div class="imput-group">
-                            <div class="custom-file">
-                                <input type="file" name="image_profile" id="inputGroup" aria-describedby="inputGroupFileAddon"
-                                class="custom-file-input" required>
-                                <label class="custom-file-label" for="inputGroupFile">imagen</label>
+                         <div class="form-group">
+                            <div class="imput-group">
+                                <div class="custom-file">
+                                    <input type="file" name="publication" id="inputGroup" aria-describedby="inputGroupFileAddon"
+                                        class="custom-file-input" required>
+                                    <label class="custom-file-label" for="inputGroupFile">Choose file</label>
+                                </div>
                             </div>
-                        </div>
-                     </div>
+                         </div>
                     <button type="submit" class="btn btn-success btn-block mt-4 ">
                         SignUp
                     </button>
