--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -22,7 +22,7 @@
 		
 		<div class="cd-search is-hidden">
 			<form action="#0">
-				<input type="search" placeholder="Search...">
+				<input type="search" placeholder="Buscar...">
 			</form>
 		</div> <!-- cd-search -->
 
