--- a/src/views/publications.hbs
+++ b/src/views/publications.hbs
@@ -56,7 +56,7 @@
                 </div>
                 <div class="form-group">
                     <button class="btn btn-success pl-5 pr-5" id="btn-toggle-comment"> 
-                        <i class="fa fa-paper-plane"></i>
+                        <i class="fa fa-facebook-messenger"></i>
                     </button>
                 </div>
             </form>
