--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -906,3 +906,8 @@ Sidebar
 .card-profile .card-links .fa.fa-facebook:hover {
   color: #2d4474;
 }
+
+.img-comment{
+  width: 50px;
+  height: 50px;
+}
