add route new group

--- a/src/views/partials/mygroups.hbs
+++ b/src/views/partials/mygroups.hbs
@@ -11,6 +11,7 @@
              <a href="#"><li class="list-group-item">Angular 4</li></a>
              <a href="#"><li class="list-group-item">Servidores en linux</li></a>
              <a href="#"><li class="list-group-item">C# .NET Framework</li></a>
+             <a href="/groupnew"><li class="list-group-item">+ Crear grupo</li></a>
              <a href="#"><li class="list-group-item">Ver mas...</li></a>
         </ul>
     </div>
