--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -858,7 +858,9 @@ Sidebar
 .card-profile .card-img-top {
   border-radius: 0;
   height: 100px;
-  background-color: #30C29E;
+  background: #ee0979;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff6a00, #ee0979);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ff6a00, #ee0979); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .card-profile .card-img-profile {
   max-width: 300px;
