--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -1,3 +1,6 @@
+{{#if messagesHelper }}
+<div>{{messagesHelper}}</div>
+{{/if}}
 <div class="row">
     <div class="col-md-7 offset-md-4">
         <div class="card mt-4 text-center">
