--- a/src/views/layouts/simplemain.hbs
+++ b/src/views/layouts/simplemain.hbs
@@ -69,7 +69,7 @@
 	
 	<!-- JQUERY -->	
 	<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
-
+	<script src="/public/assets/js/script-jquery-index.js"></script>
   	<script src="/public/assets/js/home.js"></script>
 </body>
 </html>
