--- a/src/views/groupnew.hbs
+++ b/src/views/groupnew.hbs
@@ -5,7 +5,7 @@
                 <h3>Create new group</h3>
             </div>
             <div class="card-body">
-                <form action="/newgroup" method="POST" enctype="multipart/form-data">
+                <form action="/groupnew/create" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <blockquote class="blockquote">
                             <p class="mb-0 float-left">Name:</p>
@@ -18,7 +18,7 @@
                         <footer class="blockquote-footer">Description on this group</footer>
                     </blockquote>
                     <div class="form-group">
-                        <textarea class="form-control" type='text' name='name'
+                        <textarea class="form-control" type='text' name='description'
                             placeholder="{{publication.description}}"></textarea>
                     </div>
                     <div class="form-group">
@@ -30,9 +30,9 @@
                         <div class="form-group">
                             <div class="imput-group">
                                 <div class="custom-file">
-                                    <input type="file" name="publication" id="inputGroup"
-                                        aria-describedby="inputGroupFileAddon" class="custom-file-input" required>
-                                    <label class="custom-file-label" for="inputGroupFile">Imgen group</label>
+                                    <input type="file" name="publication" id="inputGroup" aria-describedby="inputGroupFileAddon"
+                                        class="custom-file-input" required>
+                                    <label class="custom-file-label" for="inputGroupFile">Choose file</label>
                                 </div>
                             </div>
                         </div>
