--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -12,7 +12,7 @@ body{
   height: auto;
 }
 
-html {
+html{
   font-size: 62.5%;
 }
 .navbar-brand img{
@@ -912,4 +912,16 @@ Sidebar
 .img-comment{
   width: 50px;
   height: 50px;
+}
+
+
+.card-title{
+  font-size: 22px;
+}
+.card-text{
+  font-size: 10px;
+}
+
+.card-img-top{
+  height: 120px;
 }
