--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -35,12 +35,10 @@
 				<li><a href="#0">Soporte</a></li>
 				<li class="has-children account">
 					<a href="#0">
-						<img src="/public/assets/img/cd-avatar.png" alt="avatar">
-						OscarRaygoza
+						<img src="/public/upload/img_profile/{{user.image_profile}}" alt="avatar">
+						{{user.nickname}}
 					</a>
 					<ul>
-						<li><a href="#0">My Account</a></li>
-						<li><a href="#0">Edit Account</a></li>
 						<li><a href="#0">Logout</a></li>
 					</ul>
 				</li>
